package com.library.enums;

public enum CopyStatus {
    AVAILABLE,
    BORROWED,
    RESERVED,
    LOST,
    DAMAGED
}
