package com.library.enums;

public enum FineStatus {
    UNPAID,
    PAID,
    CANCELLED
}
