package com.library.enums;

public enum LoanStatus {
    ONGOING,
    RETURNED,
    OVERDUE,
    LOST
}
