package com.library.enums;

public enum ReservationStatus {
    PENDING,
    FULFILLED,
    CANCELLED,
    EXPIRED
}
